objects/BIOData__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blood_group__c</fullName>
        <label>Blood group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>full_Name__c</fullName>
        <label>full Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>BIOData</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BIOData Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BIODatas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>